# sciigilo

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml  rust.yml
src/: main.rs
src/models/: alert.rs  cpu.rs  disk.rs  mem.rs  metrics.rs  mod.rs  os_info.rs  request.rs
src/routes/: alerts.rs  index.rs  logs.rs  metrics.rs  mod.rs
src/utils/: collector.rs  config.rs  db.rs  log.rs  mod.rs  watchtower.rs
templates/: index.html
