[package]
name = "sciigilo"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.12.1"
axum = "0.8.1"
dotenvy = "0.15.7"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "default-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio", "sqlite"] }
sysinfo = "=0.33.1"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.15.1", features = ["serde", "v4"] }

