[package]
name = "sciigilo"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.13.0"
axum = "0.8.1"
chrono = "0.4.40"
dirs = "6.0.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio", "sqlite"] }
sysinfo = "=0.34.1"
tokio = { version = "1.43.1", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.15.1", features = ["serde", "v4"] }

[profile.release]
strip = 'debuginfo'
lto = true